# csxl.unc.edu

./: .dockerignore  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  Procfile  README.md  alembic.ini  package-lock.json  package.json  pnpm-lock.yaml
backend/: __init__.py  database.py  env.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  application.py  article.py  authentication.py  event.py  events.py  health.py  hiring.py  org_role.py  organization.py  organizations.py  profile.py  registration.py  room.py  sample.py  showcase.py  signage.py  static_files.py  user.py  websocket.py
backend/entities/: __init__.py  application_entity.py  application_review_entity.py  article_author_entity.py  article_entity.py  entity_base.py  event_entity.py  event_registration_entity.py  feedback_entity.py  log_entity.py  org_role_entity.py  organization_entity.py  organization_membership_entity.py  permission_entity.py  registration_entity.py  role_entity.py  room_entity.py  section_application_table.py  user_entity.py  user_role_entity.py  user_role_table.py
backend/migrations/: README  env.py
backend/models/: __init__.py  application.py  application_details.py  application_review.py  comp_227.py  event.py  event_detail.py  event_details.py  event_member.py  event_registration.py  feedback.py  feedback_details.py  log.py  openai_test_response.py  org_role.py  organization.py  organization_detail.py  organization_details.py  organization_join_type.py  organization_membership.py  organization_role.py  pagination.py  permission.py  role.py  (+14 more)
(+1527 files in other folders)
